/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message ChannelOpenRequest {
  required int32 priority = 1;
  required int32 channel_id = 2;
}
